--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,7 @@ supervision==0.17.1  # For visual annotations
 aiohttp==3.9.0
 
 # Additional utilities
-tqdm==4.66.1 
+tqdm==4.66.1
+
+# GPU monitoring
+pynvml==11.5.3 
